--- a/index.html
+++ b/index.html
@@ -6,12 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aprendendo CSS</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
+    <link href="https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Foundation&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <h1 class="center">Aprendendo CSS</h1>
     <p id="para" class="center fonte-verde" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur reprehenderit doloribus eveniet omnis voluptatem nesciunt nostrum, nihil fuga enim voluptatibus minus quas eos magni. Et perspiciatis sit placeat perferendis iusto.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, nisi ea voluptatem aut molestiae cupiditate repellendus veritatis dolorem, aspernatur ipsam quam deleniti eveniet neque expedita non nobis assumenda, earum suscipit.</p>
+    <p id="para" class="center fonte-verde">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, nisi ea voluptatem aut molestiae cupiditate repellendus veritatis dolorem, aspernatur ipsam quam deleniti eveniet neque expedita non nobis assumenda, earum suscipit.</p>
 
-    <h1>Aprendendo Classes</h1>
+    <h1 class="center">Aprendendo Classes</h1>
+    <div class="link">
+    <a href="https://www.instagram.com/rtx.mand/">Clique Aqui!</a>
+    </div>
 </body>
 </html>
